--- a/package.json
+++ b/package.json
@@ -4,17 +4,28 @@
 	"private": true,
 	"scripts": {
 		"dev": "whop-proxy --npmCommand \"next dev --turbopack\"",
-		"build": "next build",
+		"build": "npx prisma generate && next build",
 		"start": "next start",
 		"lint": "next lint"
 	},
 	"dependencies": {
+		"@paralleldrive/cuid2": "^2.2.2",
+		"@prisma/client": "^6.13.0",
 		"@vercel/functions": "^2.0.3",
 		"@whop/api": "^0.0.29",
 		"@whop/react": "0.2.14",
-		"next": "15.3.2",
+		"clsx": "^2.1.1",
+		"dotenv": "^17.2.1",
+		"drizzle-orm": "^0.44.4",
+		"framer-motion": "^12.23.12",
+		"lucide-react": "^0.536.0",
+		"next": "^15.3.2",
+		"postgres": "^3.4.7",
 		"react": "^19.0.0",
-		"react-dom": "^19.0.0"
+		"react-dom": "^19.0.0",
+		"react-is": "^19.1.1",
+		"recharts": "^3.1.0",
+		"tailwind-merge": "^3.3.1"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "^1.9.4",
@@ -24,7 +35,9 @@
 		"@types/react-dom": "^19",
 		"@whop-apps/dev-proxy": "0.0.1-canary.116",
 		"dotenv-cli": "^8.0.0",
+		"drizzle-kit": "^0.31.4",
 		"tailwindcss": "^4",
+		"tsx": "^4.20.3",
 		"typescript": "^5"
 	},
 	"packageManager": "pnpm@9.15.9+sha512.68046141893c66fad01c079231128e9afb89ef87e2691d69e4d40eee228988295fd4682181bae55b58418c3a253bde65a505ec7c5f9403ece5cc3cd37dcf2531"
